# easydict

./: pyproject.toml
easydict/: __init__.py
src/easydict/: __init__.py
