[project]
name = "easydict"
version = "1.12"
description = "Access dict values as attributes (works recursively)."
readme = "README.rst"
requires-python = ">=2.5"
keywords = ["Tools"]
license = { file = "LICENSE" }

authors = [
    { name = "Mathieu Leplatre", email = "mathieu.leplatre@makina-corpus.com" },
]

urls = { "Homepage" = "https://github.com/makinacorpus/easydict", "Download" = "http://pypi.python.org/pypi/easydict/" }

classifiers = [
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
